Fix the sphere hover box covering the UI.

--- a/resources/main.scss
+++ b/resources/main.scss
@@ -761,6 +761,7 @@ input, textarea, [contenteditable] {
     position: absolute;
     top: 0;
     left: 0;
+    z-index: -1; // underneath the UI
 
     circle {
         pointer-events: auto; /* reenable pointer events that are disabled on .ui */
